phase2_Dev/src/objects/HistoricalDocumentStaging__c.object
<CustomObject>
    <description>This object will be used as staging for converting metadata for historical documents into S3_file records related to appropriate cases, visits or investigations.</description>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <label>DocumentDate</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeId__c</fullName>
        <label>IntakeId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionId__c</fullName>
        <label>InteractionId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetaDataFileName__c</fullName>
        <label>MetaDataFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramId__c</fullName>
        <label>ProgramId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>HistoricalDocumentStaging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HistoricalDocumentStaging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HistoricalDocumentStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>